--- a/product.html
+++ b/product.html
@@ -27,77 +27,194 @@
   <div id="app">
     <div class="container">
       <div class="row py-3">
-        <div class="col-md-6">
-          <h2>產品列表</h2>
-          <table class="table table-hover mt-4">
-            <thead>
-              <tr>
-                <th width="150">產品名稱</th>
-                <th width="120">
-                  原價
-                </th>
-                <th width="120">
-                  售價
-                </th>
-                <th width="150">
-                  是否啟用
-                </th>
-                <th width="120">
-                  查看細節
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="(item) in products" :key="item.id">
-                <td width="150">{{ item.title }}</td>
-                <td width="120">
-                  {{ item.origin_price }}
-                </td>
-                <td width="120">
-                  {{ item.price }}
-                </td>
-                <td width="150">
-                  <span class="text-success" v-if="item.is_enabled">啟用</span>
-                  <span v-else>未啟用</span>
-                </td>
-                <td width="120">
-                  <button type="button" class="btn btn-primary" @click="getDetail(item)">查看細節</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>目前有 <span>{{ products.length}}</span> 項產品</p>
+        <div class="text-end mb-3">
+          <button type="button" class="btn btn-primary" @click="openModal('new')">建立新的產品</button>
         </div>
-        <div class="col-md-6">
-          <h2>單一產品細節</h2>
-          <template v-if="tempProducts.title">
-            <div class="card mb-3">
-              <img :src="tempProducts.imageUrl" class="card-img-top primary-image" alt="主圖">
-              <div class="card-body">
-                <h5 class="card-title">
-                  {{ tempProducts.title }}
-                  <span class="badge bg-primary ms-2">{{ tempProducts.category}}</span>
-                </h5>
-                <p class="card-text">商品描述：{{ tempProducts.description}}</p>
-                <p class="card-text">商品內容：{{ tempProducts.content}}</p>
-                <div class="d-flex">
-                  <p class="card-text me-2">{{ tempProducts.origin_price}}</p>
-                  <p class="card-text text-secondary"><del>{{ tempProducts.origin_price }}</del></p>
-                  元 / {{ tempProducts.unit}}
+        <table class="table table-hover mt-4">
+          <thead>
+            <tr>
+              <th width="120">
+                分類
+              </th>
+              <th width="150">
+                產品名稱
+              </th>
+              <th width="120">
+                原價
+              </th>
+              <th width="120">
+                售價
+              </th>
+              <th width="150">
+                是否啟用
+              </th>
+              <th width="120">
+                編輯
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="(item) in products" :key="item.id">
+              <td width="120">
+                {{item.category}}
+              </td>
+              <td>{{ item.title }}</td>
+              <td width="120">
+                {{ item.origin_price }}
+              </td>
+              <td width="120">
+                {{ item.price }}
+              </td>
+              <td width="100">
+                <span class="text-success" v-if="item.is_enabled">啟用</span>
+                <span v-else>未啟用</span>
+              </td>
+              <td width="120">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-primary" @click="openModal('edit',item)">編輯</button>
+                  <button type="button" class="btn btn-danger" @click="openModal('delete',item)">刪除</button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="modal" id="productModal"tabindex="-1">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content border-0">
+          <div class="modal-header bg-dark text-white">
+            <h5 class="modal-title">
+              <span v-if="isNew">新增產品</span>
+              <span v-else>編輯產品</span>
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="mb-3">
+                  <label for="imageUrl" class="form-label">主要圖片</label>
+                  <input type="text" class="form-control"
+                          placeholder="請輸入圖片連結" v-model="tempProducts.imageUrl">
+                </div>
+                <img class="img-fluid" :src="tempProducts.imageUrl" alt="">
+                <h3 class="mb-3">多圖新增</h3>
+                <!-- 判斷傳入的值是否為array -->
+                <div v-if="Array.isArray(tempProducts.imagesUrl)">
+                  <div class="mb-1" v-for="(img,key) in tempProducts.imagesUrl" :key="key">
+                    <div class="mb-3">
+                      <label for="imageUrl" class="form-label" v-model="tempProducts.imagesUrl">輸入圖片網址</label>
+                      <input type="text" class="form-control"
+                             placeholder="請輸入圖片連結" v-model="tempProducts.imagesUrl[key]">
+                    </div>
+                    <img class="img-fluid" :src="img" alt="">
+                </div>
+                <!-- 當tempProducts.imagesUrl的資料筆數為0時的相反(當結果為true時) || tempProducts.imagesUrl[- 1]，當為新增資料時隱藏刪除按鈕，否則就顯現刪除按鈕-->
+                <div v-if="!tempProducts.imagesUrl.length || tempProducts.imagesUrl[tempProducts.imagesUrl.length - 1]">
+                  <button class="btn btn-outline-primary btn-sm d-block w-100" @click="tempProducts.imagesUrl.push('')">
+                    新增圖片
+                  </button>
+                </div>
+                <div v-else>
+                  <button class="btn btn-outline-danger btn-sm d-block w-100" @click="tempProducts.imagesUrl.pop()">
+                    刪除圖片
+                  </button>
+                </div>
+              </div>
+              <div v-else>
+                <button class="btn btn-outline-primary btn-sm d-block w-100" @click="createImages">新增圖片</button>
+              </div>
+              <div class="col-sm-8">
+                <div class="mb-3">
+                  <label for="title" class="form-label">標題</label>
+                  <input id="title" type="text" class="form-control" placeholder="請輸入標題" v-model="tempProducts.title">
+                </div>
+
+                <div class="row">
+                  <div class="mb-3 col-md-6">
+                    <label for="category" class="form-label">分類</label>
+                    <input id="category" type="text" class="form-control"
+                           placeholder="請輸入分類" v-model="tempProducts.category">
+                  </div>
+                  <div class="mb-3 col-md-6">
+                    <label for="price" class="form-label">單位</label>
+                    <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tempProducts.unit">
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="mb-3 col-md-6">
+                    <label for="origin_price" class="form-label">原價</label>
+                    <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model="tempProducts.origin_price">
+                  </div>
+                  <div class="mb-3 col-md-6">
+                    <label for="price" class="form-label">售價</label>
+                    <input id="price" type="number" min="0" class="form-control"
+                           placeholder="請輸入售價" v-model="tempProducts.price">
+                  </div>
+                </div>
+                <hr>
+
+                <div class="mb-3">
+                  <label for="description" class="form-label">產品描述</label>
+                  <textarea id="description" type="text" class="form-control"
+                            placeholder="請輸入產品描述" v-model="tempProducts.description">
+                  </textarea>
+                </div>
+                <div class="mb-3">
+                  <label for="content" class="form-label">說明內容</label>
+                  <textarea id="description" type="text" class="form-control"
+                            placeholder="請輸入說明內容" v-model="tempProducts.content">
+                  </textarea>
+                </div>
+                <div class="mb-3">
+                  <div class="form-check">
+                    <input id="is_enabled" class="form-check-input" type="checkbox"
+                           :true-value="1" :false-value="0" v-model="tempProducts.is_enabled">
+                    <label class="form-check-label" for="is_enabled">是否啟用</label>
+                  </div>
                 </div>
               </div>
             </div>
-            <template v-for="(img,id) in tempProducts.imagesUrl" :key="id">
-              <img v-if="img":src="img" :alt="`${id+1}`" class="images m-2">
-            </template>
-          </template>
-          <p class="text-secondary" v-else>請選擇一個商品查看</p>
-          
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-primary" @click="updateProduct">確認</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  <div id="delProductModal" ref="delProductModal" class="modal fade" tabindex="-1"
+  aria-labelledby="delProductModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+ <div class="modal-content border-0">
+   <div class="modal-header bg-danger text-white">
+     <h5 id="delProductModalLabel" class="modal-title">
+       <span>刪除產品</span>
+     </h5>
+     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+   </div>
+   <div class="modal-body">
+     是否刪除
+     <strong class="text-danger">{{tempProducts.title}}</strong> 商品(刪除後將無法恢復)。
+   </div>
+   <div class="modal-footer">
+     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+       取消
+     </button>
+     <button type="button" class="btn btn-danger" @click="deleteProduct">
+       確認刪除
+     </button>
+   </div>
+ </div>
+</div>
+</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.37/vue.global.prod.min.js"></script>
   <script src="./js/product.js"></script>
 </body>
